--- a/src/pages/add-contract/add-contract.component.html
+++ b/src/pages/add-contract/add-contract.component.html
@@ -47,5 +47,10 @@
 
 </ion-content>
 <ion-footer>
-
+  <ion-tabs>
+    <ion-tab tabIcon="water" tabTitle="Water" ></ion-tab>
+    <ion-tab tabIcon="leaf" tabTitle="Life" ></ion-tab>
+    <ion-tab tabIcon="flame" tabTitle="Fire" ></ion-tab>
+    <ion-tab tabIcon="magnet" tabTitle="Force"></ion-tab>
+  </ion-tabs>
 </ion-footer>
